--- a/WeekendProject.BLL/WeekendProject.BLL.csproj
+++ b/WeekendProject.BLL/WeekendProject.BLL.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8616FECA-F856-469A-A575-1F4A3ED66BBF}</ProjectGuid>
+    <ProjectGuid>{DB4C7340-E56C-4527-AD09-3B16471946C2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WeekendProjectje.Tests</RootNamespace>
-    <AssemblyName>WeekendProjectje.Tests</AssemblyName>
+    <RootNamespace>WeekendProject.BLL</RootNamespace>
+    <AssemblyName>WeekendProject.BLL</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,9 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework">
-      <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -42,19 +39,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BoekenKastTests.cs" />
-    <Compile Include="BoekTests.cs" />
+    <Compile Include="Model\Boek.cs" />
+    <Compile Include="Model\BoekenKast.cs" />
+    <Compile Include="ViewModels\BoekViewModel.cs" />
+    <Compile Include="Factory\Factory.cs" />
+    <Compile Include="Model\Persoon.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\WeekendProject.BLL\WeekendProject.BLL.csproj">
-      <Project>{DB4C7340-E56C-4527-AD09-3B16471946C2}</Project>
-      <Name>WeekendProject.BLL</Name>
-    </ProjectReference>
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
